# OmniParser

./: .gitignore  .release-please-config.json  AGENT.md  ARCHITECTURE_ANALYSIS_QR.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLAUDE.md  COVERAGE_QUICK_REFERENCE.txt  FUNCTIONAL_PATTERNS.md  IMPLEMENTATION_REFERENCE.md  LICENSE  NEXT_STEPS.md  OMNIPARSER_PROJECT_SPEC.md  PATTERNS_QUICK_REF.md  PLANS.md  README.md  TODOS.md  cliff.toml  config_template.json  convert_epubs_to_docx.py  integration-summary.md  pyproject.toml  secrets_template.json  todo2.md
.github/workflows/: changelog-workflow.yml  claude-code-review.yml  claude.yml  release-please.yml
AgentUsage/templates/: secrets_template.json
Diagrams/: omniparser-mermaid-diagrams.md  omniparser-mermaid-diagrams_linked.md
docs/: AGENT_PROMPTS.md  ARCHITECTURE_PLAN.md  CHANGELOG_AUTOMATION.md  CLAUDE_CODE_EPUB2TTS_MIGRATION_GUIDE.md  CLAUDE_CODE_REFACTORING_GUIDE.md  IMPLEMENTATION_REFERENCE.md  METAPROMPT_1_OMNIPARSER_EXTRACTION.md  NEXT_STEPS.md  REFACTORING-PARSERS.md  RESEARCH_SYNTHESIS_SUMMARY.md  ai_features.md  changelog-workflow.yml  cleanup-report-2025-10-29.md
docs/Diagrams/: comprehensive-workflow.md  comprehensive-workflow_linked.md
docs/ai-testing/: AI_COVERAGE_SUMMARY.txt  AI_TESTING_COMPLETE_SUMMARY.md  COVERAGE_ANALYSIS_INDEX.md  COVERAGE_REPORT_AI_MODULES.md  NEXT_STEPS.md  README.md
docs/sessions/: README.md  SESSION_1_PDF_PARSER_REFACTOR.md  SESSION_2_DOCX_PARSER_REFACTOR.md  SESSION_3_MARKDOWN_TEXT_REFACTOR.md  SESSION_4_EPUB_PARSER_REFACTOR.md  SESSION_5_HTML_PARSER_REFACTOR.md  SESSION_EPUB2TTS_MIGRATION.md
examples/: README.md  ai_usage_example.py  create_fillable_form_pdf.py  docx_to_markdown.py  epub_to_markdown.py  html_to_pdf_converter.py
src/omniparser/: __init__.py  ai_config.py  exceptions.py  models.py  parser.py
tests/: conftest.py
tests/fixtures/: TEST_FIXTURES_README.md
tests/integration/: test_ai_features_integration.py  test_ai_retry_integration.py  test_ai_vision_integration.py  test_epub_parsing.py  test_html_parsing.py  test_markdown_parser_integration.py  test_pdf_parsing.py  test_qr_integration.py  test_text_parsing.py
tests/unit/: test_ai_config.py  test_ai_image_analyzer.py  test_ai_image_describer.py  test_ai_quality.py  test_ai_summarizer.py  test_ai_tagger.py  test_config.py  test_docx_hyperlinks.py  (+22 more)
(+124 files in other folders)
